data/forge_javadoc/1.7.10/processed/net_minecraft_client_gui_GuiOptionSlider.md
# GuiOptionSlider

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiButton → net.minecraft.client.gui.GuiOptionSlider

## Class signature

```java
public class GuiOptionSlider extends GuiButton
```

## Constructors

- `GuiOptionSlider(int p_i45016_1_, int p_i45016_2_, int p_i45016_3_, GameSettings.Options p_i45016_4_)`
- `GuiOptionSlider(int p_i45017_1_, int p_i45017_2_, int p_i45017_3_, GameSettings.Options p_i45017_4_, float p_i45017_5_, float p_i45017_6_)`

## Methods

- `int getHoverState(boolean p_146114_1_)`
- `protected void mouseDragged(Minecraft p_146119_1_, int p_146119_2_, int p_146119_3_)`
- `boolean mousePressed(Minecraft p_146116_1_, int p_146116_2_, int p_146116_3_)`
- `void mouseReleased(int p_146118_1_, int p_146118_2_)`

## Fields

- `boolean field_146135_o`